--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ services:
     - docker
 
 
-after_success:
+before_install:
     - docker build -t fayez/react-app .
+
+script:
+    - docker run fayez/react-app
 
     
 
